--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,7 @@
          colors="true"
          stderr="true">
     <testsuites>
-        <testsuite name="zend-expressive-authentication">
+        <testsuite name="mezzio-authentication">
             <directory>./test</directory>
         </testsuite>
     </testsuites>
