--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,8 @@
 docs_dir: docs/book
 site_dir: docs/html
-pages:
+nav:
     - index.md
     - Introduction: intro.md
 site_name: Authentication middleware
-site_description: 'Authentication middleware for Expressive and PSR-7 applications'
-repo_url: 'https://github.com/zendframework/zend-expressive-authentication'
-copyright: 'Copyright (c) 2017 <a href="http://www.zend.com/">Zend Technologies USA Inc.</a>'
+site_description: 'Authentication middleware for Mezzio and PSR-7 applications'
+repo_url: 'https://github.com/mezzio/mezzio-authentication'
