--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,7 +8,7 @@
         <testsuite name="without diactoros">
             <file>./test/ResponsePrototypeTraitWithoutDiactorosTest.php</file>
         </testsuite>
-        <testsuite name="zend-expressive-authentication">
+        <testsuite name="mezzio-authentication">
             <directory>./test</directory>
             <exclude>./test/ResponsePrototypeTraitWithoutDiactorosTest.php</exclude>
         </testsuite>
