--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,7 @@
 /docs/ export-ignore
 /mkdocs.yml export-ignore
 /phpcs.xml export-ignore
+/psalm-baseline.xml export-ignore
+/psalm.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
 /test/ export-ignore
