Add pdo_sqlite extension requirement to run tests
Signed-off-by: Gary Lockett <gary@creativecow.uk>

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
+        "ext-pdo_sqlite": "*",
         "laminas/laminas-coding-standard": "^2.1.1",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpspec/prophecy": "^1.12",
