--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,9 @@
     },
     "require-dev": {
         "ext-pdo_sqlite": "*",
-        "laminas/laminas-coding-standard": "^2.1.1",
-        "phpspec/prophecy-phpunit": "^2.0",
+        "laminas/laminas-coding-standard": "~2.2.0",
         "phpspec/prophecy": "^1.12",
+        "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.3",
         "psalm/plugin-phpunit": "^0.12.2",
         "vimeo/psalm": "^3.16"
