--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         }
     },
     "require": {
-        "php": "^7.3 || ~8.0.0",
-        "laminas/laminas-zendframework-bridge": "^1.0",
+        "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
@@ -46,7 +45,8 @@
         "vimeo/psalm": "^3.16"
     },
     "conflict": {
-        "container-interop/container-interop": "<1.2.0"
+        "container-interop/container-interop": "<1.2.0",
+        "zendframework/zend-expressive-authentication": "*"
     },
     "suggest": {
         "ext-pdo": "*: for use with the PDO-backed UserRepositoryInterface implementation",
@@ -75,8 +75,5 @@
         "static-analysis": "psalm --shepherd --stats",
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
-    },
-    "replace": {
-        "zendframework/zend-expressive-authentication": "^1.1.0"
     }
 }
