Add config.platform to composer
- Bump dev dependencies
- update dotfiles and export-ignores

Signed-off-by: George Steel <george@net-glue.co.uk>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,13 @@
-/.coveralls.yml export-ignore
-/.gitattributes export-ignore
 /.github/ export-ignore
+/docs/ export-ignore
+/test/ export-ignore
 /.gitignore export-ignore
 /.laminas-ci.json export-ignore
-/docs/ export-ignore
-/mkdocs.yml export-ignore
+/composer.lock export-ignore
+/renovate.json export-ignore
+/.gitattributes export-ignore
 /phpcs.xml export-ignore
-/psalm-baseline.xml export-ignore
 /psalm.xml.dist export-ignore
+/psalm-baseline.xml export-ignore
 /phpunit.xml.dist export-ignore
-/test/ export-ignore
+/mkdocs.yml export-ignore
