Add support for PHP 8.2, remove support for PHP 7.4
Signed-off-by: George Steel <george@net-glue.co.uk>

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "composer/package-versions-deprecated": true
         },
         "platform": {
-            "php": "7.4.99"
+            "php": "8.0.99"
         }
     },
     "extra": {
@@ -36,7 +36,7 @@
         }
     },
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
@@ -45,9 +45,9 @@
     "require-dev": {
         "ext-sqlite3": "*",
         "laminas/laminas-coding-standard": "~2.4.0",
-        "phpunit/phpunit": "^9.5.24",
+        "phpunit/phpunit": "^9.5.25",
         "psalm/plugin-phpunit": "^0.17.0",
-        "vimeo/psalm": "^4.27.0"
+        "vimeo/psalm": "^4.29"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
