--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "composer/package-versions-deprecated": true
         },
         "platform": {
-            "php": "8.0.99"
+            "php": "8.1.99"
         }
     },
     "extra": {
@@ -36,7 +36,7 @@
         }
     },
     "require": {
-        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
+        "php": "~8.1.0 || ~8.2.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
@@ -45,9 +45,9 @@
     "require-dev": {
         "ext-sqlite3": "*",
         "laminas/laminas-coding-standard": "~2.5.0",
-        "phpunit/phpunit": "^9.5.27",
+        "phpunit/phpunit": "^9.6.6",
         "psalm/plugin-phpunit": "^0.18.4",
-        "vimeo/psalm": "^5.3"
+        "vimeo/psalm": "^5.9"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
