--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         }
     },
     "require": {
-        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/http-message": "^1.0.1 || ^2.0.0",
         "psr/http-server-middleware": "^1.0",
@@ -45,9 +45,9 @@
     "require-dev": {
         "ext-sqlite3": "*",
         "laminas/laminas-coding-standard": "~2.5.0",
-        "phpunit/phpunit": "^10.4.2",
+        "phpunit/phpunit": "^10.5.36",
         "psalm/plugin-phpunit": "^0.19.0",
-        "vimeo/psalm": "^5.16"
+        "vimeo/psalm": "^5.26.1"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
